fix the out of bound error

--- a/style.css
+++ b/style.css
@@ -17,12 +17,12 @@ back
 text-shadow: 1px 1px 2px #FF9843;
   width: 640px;
   height: 400px;
-  position:absolute;
+  position: absolute;
   margin: auto;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
+  left: 0%;
+  right: 80%;
+  top: 10%;
+  bottom: 0%;
   -webkit-perspective: 1200px;
   perspective: 1200px;
   transition: 1s;
